--- a/WebQuanLyResort/WebQuanLyResort/Views/Shared/_Layout.cshtml
+++ b/WebQuanLyResort/WebQuanLyResort/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
 
     <!-- Template Main CSS File -->
     <link href="~/assets/css/style.css" rel="stylesheet">
+    <link href="~/Scripts/jquery-3.7.1.js" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.6.1.js"
+            integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
 
     <style>
         * {
@@ -56,10 +59,11 @@
 
             <nav id="navbar" class="navbar">
                 <ul class="text-uppercase">
-                    <li ><a class="active " href="/home/index">Trang chủ</a></li>
+                    <li><a class="active " href="/home/index">Trang chủ</a></li>
                     <li><a href="/home/tatcaphong">Resort</a></li>
                     <li><a href="#">Đặt trước</a></li>
                     <li><a href="#">Liên hệ</a></li>
+                    <li><a href="/home/lichsudatphong">Lịch sử đặt phòng</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
