--- a/WebQuanLyResort/WebQuanLyResort/Views/Phong/XacNhanThongTin.cshtml
+++ b/WebQuanLyResort/WebQuanLyResort/Views/Phong/XacNhanThongTin.cshtml
@@ -52,6 +52,13 @@
                         <input class="form-control d-none" type="text" name="gioi_tinh" id="gioi_tinh" value="@ViewBag.khachhang.gioi_tinh" />
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <label for="email_khachhang">Email</label>
+                        <input class="form-control" type="text" name="email_khachhang" id="email_khachhang" value="@ViewBag.khachhang.email_khachhang" disabled />
+                        <input class="form-control d-none" type="text" name="email_khachhang" id="email_khachhang" value="@ViewBag.khachhang.email_khachhang" />
+                    </div>
+                </div>
             </div>
 
             <script>
