--- a/WebQuanLyResort/WebQuanLyResort/Views/Shared/_LayoutPageChiTiet.cshtml
+++ b/WebQuanLyResort/WebQuanLyResort/Views/Shared/_LayoutPageChiTiet.cshtml
@@ -40,6 +40,9 @@
 
     <!-- Template Main CSS File -->
     <link href="~/assets/css/style.css" rel="stylesheet">
+    <link href="~/Scripts/jquery-3.7.1.js" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.6.1.js"
+            integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
 
     <style>
         * {
@@ -72,6 +75,7 @@
                     <li><a href="/home/tatcaphong">resort</a></li>
                     <li><a href="#">Đặt trước</a></li>
                     <li><a href="#">Liên hệ</a></li>
+                    <li><a href="/home/lichsudatphong">Lịch sử đặt phòng</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
