--- a/WebQuanLyResort/WebQuanLyResort/Views/Shared/_Layout.cshtml
+++ b/WebQuanLyResort/WebQuanLyResort/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.8.3.js"></script>
@@ -63,7 +63,17 @@
                     <li><a href="/home/tatcaphong">Resort</a></li>
                     <li><a href="#">Đặt trước</a></li>
                     <li><a href="#">Liên hệ</a></li>
-                    <li><a href="/home/lichsudatphong">Lịch sử đặt phòng</a></li>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li><a href="/home/lichsudatphong?username=@User.Identity.Name">Lịch sử đặt phòng</a></li>
+                        <li><a href="/account/logout">Đăng xuất</a></li>
+                        <li><a href="#">Xin chào, @User.Identity.Name</a></li>
+                    }
+                    else
+                    {
+                        <li><a href="/account/login">Đăng nhập</a></li>
+                        <li><a href="/account/register">Đăng ký</a></li>
+                    }
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
