--- a/WebQuanLyResort/WebQuanLyResort/Views/Shared/_LayoutPageChiTiet.cshtml
+++ b/WebQuanLyResort/WebQuanLyResort/Views/Shared/_LayoutPageChiTiet.cshtml
@@ -75,7 +75,17 @@
                     <li><a href="/home/tatcaphong">resort</a></li>
                     <li><a href="#">Đặt trước</a></li>
                     <li><a href="#">Liên hệ</a></li>
-                    <li><a href="/home/lichsudatphong">Lịch sử đặt phòng</a></li>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li><a href="/home/lichsudatphong">Lịch sử đặt phòng</a></li>
+                        <li><a href="/account/logout">Đăng xuất</a></li>
+                        <li><a href="#">Xin chào, @User.Identity.Name</a></li>
+                    }
+                    else
+                    {
+                        <li><a href="/account/login">Đăng nhập</a></li>
+                        <li><a href="/account/register">Đăng ký</a></li>
+                    }
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
