--- a/WebQuanLyResort/WebQuanLyResort/Views/Account/Login.cshtml
+++ b/WebQuanLyResort/WebQuanLyResort/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WebQuanLyResort.ViewModel.LoginVM
 
 @{
-    ViewBag.Title = "Login";
+    ViewBag.Title = "Moderna - Đăng nhập";
     Layout = "~/Views/Shared/_LayoutPageChiTiet.cshtml";
 }
 
