--- a/WebQuanLyResort/WebQuanLyResort/Views/Home/Index.cshtml
+++ b/WebQuanLyResort/WebQuanLyResort/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model  List<WebQuanLyResort.Models.phong>
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Moderna - Trang chủ";
 }
 @{ 
     ViewBag.index = 1;
