--- a/WebQuanLyResort/WebQuanLyResort/Views/Home/LichSuDatPhong.cshtml
+++ b/WebQuanLyResort/WebQuanLyResort/Views/Home/LichSuDatPhong.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<WebQuanLyResort.Models.datphong>
 @{
-    ViewBag.Title = "LichSuDatPhong";
+    ViewBag.Title = "Moderna - Lịch sử đặt phòng";
     Layout = "~/Views/Shared/_LayoutPageChiTiet.cshtml";
 }
 <style>
