--- a/WebQuanLyResort/WebQuanLyResort/Views/Phong/Checkout.cshtml
+++ b/WebQuanLyResort/WebQuanLyResort/Views/Phong/Checkout.cshtml
@@ -1,6 +1,6 @@
 ﻿@model WebQuanLyResort.Models.BookingInfo
 @{
-    ViewBag.Title = "Checkout";
+    ViewBag.Title = "Moderna - Booking";
     Layout = "~/Views/Shared/_LayoutPageChiTiet.cshtml";
 }
 @{ 
