--- a/WebQuanLyResort/WebQuanLyResort/Views/Phong/DatPhongThanhCong.cshtml
+++ b/WebQuanLyResort/WebQuanLyResort/Views/Phong/DatPhongThanhCong.cshtml
@@ -1,9 +1,9 @@
 ﻿
 @{
-    ViewBag.Title = "DatPhongThanhCong";
+    ViewBag.Title = "Moderna - Đặt phòng thành công";
     Layout = "~/Views/Shared/_LayoutPageChiTiet.cshtml";
 }
-<div style="padding-top:80px">
+<div style="padding-top:120px" class="mb-5">
     <div class="container">
         <div class="booking-success mt-5" style="text-align:center">
             <h1>Đặt phòng thành công</h1>
