--- a/WebQuanLyResort/WebQuanLyResort/Views/Phong/Index.cshtml
+++ b/WebQuanLyResort/WebQuanLyResort/Views/Phong/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model WebQuanLyResort.Models.phong
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Moderna - Đặt phòng";
     Layout = "~/Views/Shared/_LayoutPageChiTiet.cshtml";
 }
 @{
