--- a/WebQuanLyResort/WebQuanLyResort/Views/Shared/_Layout.cshtml
+++ b/WebQuanLyResort/WebQuanLyResort/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&family=Source+Code+Pro:ital@1&display=swap" rel="stylesheet">
 
     <!-- Favicons -->
-    @*<link href="~/assets/img/favicon.png" rel="icon">*@
+    <link href="~/assets/img/resort.png" rel="icon">
     <link href="~/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
     <!-- Vendor CSS Files -->
     <link href="~/assets/vendor/animate.css/animate.min.css" rel="stylesheet">
