--- a/WebQuanLyResort/WebQuanLyResort/Views/Account/Register.cshtml
+++ b/WebQuanLyResort/WebQuanLyResort/Views/Account/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@model WebQuanLyResort.ViewModel.RegisterVM
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Moderna - Đăng ký";
     Layout = "~/Views/Shared/_LayoutPageChiTiet.cshtml";
 }
 
