--- a/WebQuanLyResort/WebQuanLyResort/Views/Home/TatCaPhong.cshtml
+++ b/WebQuanLyResort/WebQuanLyResort/Views/Home/TatCaPhong.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<WebQuanLyResort.Models.phong>
 @{
-    ViewBag.Title = "TatCaPhong";
+    ViewBag.Title = "Moderna - Danh sách phòng";
     Layout = "~/Views/Shared/_LayoutPageChiTiet.cshtml";
 }
 <style>
