--- a/WebQuanLyResort/WebQuanLyResort/Views/Shared/_LayoutPageChiTiet.cshtml
+++ b/WebQuanLyResort/WebQuanLyResort/Views/Shared/_LayoutPageChiTiet.cshtml
@@ -44,6 +44,9 @@
     <script src="https://code.jquery.com/jquery-3.6.1.js"
             integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
 
+    <link href="~/Style/style.css" rel="stylesheet" />
+
+
     <style>
         * {
             margin: 0;
@@ -91,7 +94,23 @@
 
         </div>
     </header><!-- End Header -->
+    <button id="myBtn" title="Lên đầu trang"><img src="~/Image/Logo/up-arrow.png" title="lên đầu trang" style="width: 50px" /></button>
+    <script>
+        window.onscroll = function () { scrollFunction() };
+        function scrollFunction() {
 
+            if (document.body.scrollTop > 600 || document.documentElement.scrollTop > 600) {
+                document.getElementById("myBtn").style.display = "block";
+            } else {
+                document.getElementById("myBtn").style.display = "none";
+            }
+        }
+
+        document.getElementById('myBtn').addEventListener("click", function () {
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
+        });
+    </script>
 
 
     <div>
@@ -125,9 +144,15 @@
                     <div class="col-lg-3 col-md-6 footer-contact">
 
                         <div class="logo">
-                            <h1 class="text-light"><a href="/home/index"><span>Moderna</span></a></h1>
+                            <h1 class="text-light text-center"><a href="/home/index"><span>Moderna</span></a></h1>
                             <!-- Uncomment below if you prefer to use an image logo -->
                             <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+                        </div>
+                        <div class="row mt-2">
+                            <div class="col col-md-12 ">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15676.22772471038!2d106.61853465898766!3d10.806951723984607!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752be27d8b4f4d%3A0x92dcba2950430867!2zVHLGsOG7nW5nIMSQ4bqhaSBo4buNYyBDw7RuZyBUaMawxqFuZyBUUC4gSOG7kyBDaMOtIE1pbmg!5e0!3m2!1svi!2s!4v1703259010506!5m2!1svi!2s"
+                                        width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 footer-links">
