--- a/WebQuanLyResort/WebQuanLyResort/Views/Account/Register.cshtml
+++ b/WebQuanLyResort/WebQuanLyResort/Views/Account/Register.cshtml
@@ -4,61 +4,89 @@
     Layout = "~/Views/Shared/_LayoutPageChiTiet.cshtml";
 }
 
-<div class="d-flex justify-content-center" style="margin-top: 100px;">
-    <h1 style="font-weight: 700">Đăng Ký</h1>
-</div>
+
 
 @using (Html.BeginForm("Register", "Account", FormMethod.Post))
 {
-<div class="row w-25 mx-auto " style="padding-left: 100px">
-    <div class="col-md-12">
-        @Html.LabelFor(temp => temp.Username, "Tài khoản")
-        @Html.TextBoxFor(temp => temp.Username, new { placeholder = "Username", @class = "form-control mt-2 mb-2" })
-        @Html.ValidationMessageFor(temp => temp.Username)
-    </div>
-    <div class="col-md-12">
-        @Html.LabelFor(temp => temp.HoTen, "Họ tên")
-        @Html.TextBoxFor(temp => temp.HoTen, new { placeholder = "HoTen", @class = "form-control mt-2 mb-2" })
-        @Html.ValidationMessageFor(temp => temp.HoTen)
-    </div>
-    <div class="col-md-12">
-        @Html.LabelFor(temp => temp.Email)
-        @Html.TextBoxFor(temp => temp.Email, new { placeholder = "Email", @class = "form-control mt-2 mb-2" })
-        @Html.ValidationMessageFor(temp => temp.Email)
-    </div>
-    <div class="col-md-12">
-        @Html.LabelFor(temp => temp.Cccd)
-        @Html.TextBoxFor(temp => temp.Cccd, new { placeholder = "Cccd", @class = "form-control mt-2 mb-2" })
-        @Html.ValidationMessageFor(temp => temp.Cccd)
-    </div>
-    <div class="col-md-12">
-        @Html.LabelFor(temp => temp.Mobile)
-        @Html.TextBoxFor(temp => temp.Mobile, new { placeholder = "Số điện thoại", @class = "form-control mt-2 mb-2" })
-        @Html.ValidationMessageFor(temp => temp.Mobile)
-    </div>
-    <div class="col-md-12">
-        <label for="DateOfBirth" class="form-label">Ngày sinh</label>
-        <input type="date" id="DateOfBirth" name="DateOfBirth" class="form-control mt-2 mb-2">
+<section class="bg-image"
+         style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');height: 1100px">
+
+    <div class="row w-25 mx-auto pt-5 pb-5 bg-white" style="padding-left: 50px; margin-top: 80px; padding-right: 50px; border-radius: 10px;">
+        <div class="d-flex justify-content-center">
+            <h1 style="font-weight: 700">Đăng Ký</h1>
+        </div>
+        <div class="col-md-12">
+            <div class="row p-2">
+                @Html.LabelFor(temp => temp.Username, "Tài khoản")
+                @Html.TextBoxFor(temp => temp.Username, new { placeholder = "Username", @class = "form-control mt-2 mb-2" })
+                @Html.ValidationMessageFor(temp => temp.Username)
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="row p-2">
+                @Html.LabelFor(temp => temp.HoTen, "Họ tên")
+                @Html.TextBoxFor(temp => temp.HoTen, new { placeholder = "Họ tên", @class = "form-control mt-2 mb-2" })
+                @Html.ValidationMessageFor(temp => temp.HoTen)
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="row p-2">
+                @Html.LabelFor(temp => temp.Email)
+                @Html.TextBoxFor(temp => temp.Email, new { placeholder = "Email", @class = "form-control mt-2 mb-2" })
+                @Html.ValidationMessageFor(temp => temp.Email)
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="row p-2">
+                @Html.LabelFor(temp => temp.Cccd)
+                @Html.TextBoxFor(temp => temp.Cccd, new { placeholder = "Cccd", @class = "form-control mt-2 mb-2" })
+                @Html.ValidationMessageFor(temp => temp.Cccd)
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="row p-2">
+                @Html.LabelFor(temp => temp.Mobile, "Số điện thoại")
+                @Html.TextBoxFor(temp => temp.Mobile, new { placeholder = "Số điện thoại", @class = "form-control mt-2 mb-2" })
+                @Html.ValidationMessageFor(temp => temp.Mobile)
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="row p-2">
+                <label for="DateOfBirth" class="form-label">Ngày sinh</label>
+                <input type="date" id="DateOfBirth" name="DateOfBirth" class="form-control mt-2 mb-2">
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="row p-2">
+                @Html.LabelFor(temp => temp.Address, "Địa chỉ")
+                @Html.TextBoxFor(temp => temp.Address, new { placeholder = "Địa chỉ", @class = "form-control mt-2 mb-2" })
+                @Html.ValidationMessageFor(temp => temp.Address)
+            </div>
+        </div>
+        <div class="col-md-12">
+            <div class="row p-2">
+                @Html.LabelFor(temp => temp.Password, "Mật khẩu")
+                @Html.PasswordFor(temp => temp.Password, new { placeholder = "Mật khẩu", @class = "form-control mt-2 mb-2" })
+                @Html.ValidationMessageFor(temp => temp.Password)
+            </div>
+        </div>
+        <div class="col-md-12">
+            <div class="row p-2">
+                @Html.LabelFor(temp => temp.ComfirmPassword, "Xác nhận mật khẩu ")
+                @Html.PasswordFor(temp => temp.ComfirmPassword, new { placeholder = "Mật khẩu xác nhận", @class = "form-control mt-2 mb-2" })
+                @Html.ValidationMessageFor(temp => temp.ComfirmPassword)
+            </div>
+        </div>
+
+        <div class="col-md-12 d-flex justify-content-center">
+            <button type="submit" class="btn btn-dark mt-3 mb-3">Đăng Ký</button>
+        </div>
     </div>
 
-    <div class="col-md-12">
-        @Html.LabelFor(temp => temp.Address)
-        @Html.TextBoxFor(temp => temp.Address, new { placeholder = "Address", @class = "form-control mt-2 mb-2" })
-        @Html.ValidationMessageFor(temp => temp.Address)
-    </div>
-    <div class="col-md-12">
-        @Html.LabelFor(temp => temp.Password, "Mật khẩu")
-        @Html.PasswordFor(temp => temp.Password, new { placeholder = "Password", @class = "form-control mt-2 mb-2" })
-        @Html.ValidationMessageFor(temp => temp.Password)
-    </div>
-    <div class="col-md-12">
-        @Html.LabelFor(temp => temp.ComfirmPassword, "Xác nhận mật khẩu ")
-        @Html.PasswordFor(temp => temp.ComfirmPassword, new { placeholder = "ConfirmPassword", @class = "form-control mt-2 mb-2" })
-        @Html.ValidationMessageFor(temp => temp.ComfirmPassword)
-    </div>
+</section>
+}
 
-    <div class="col-md-12 d-flex justify-content-center">
-        <button type="submit" class="btn btn-dark mt-3 mb-3">Đăng Ký</button>
-    </div>
-</div>}
+@* =========================================================================================== *@
+
+
 
